[package]
name = "mimc-fast"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
uint = "0.8.5"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rocket_cors = "0.5.1"
serde = { version = "1.0.116", features = ["derive"] }
rayon = "1.1"
itertools = "0.9.0"
