[package]
name = "mimc-fast"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
uint = "0.9.0"
serde = { version = "1.0.124", features = ["derive"] }
rayon = "1.5.0"
itertools = "0.10.0"
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
tide-acme = "0.1.0"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
