[package]
name = "darkforest"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mimc = { version = "0.1.0", path = "../mimc" }
serde = { version = "1.0.124", features = ["derive"] }
