[package]
name = "df-explorer"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.5.0"
itertools = "0.10.0"
darkforest = { version = "0.1.0", path = "../darkforest" }
