[package]
name = "mimc-fast"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
tide-acme = "0.1.0"
tide-rustls = "0.3.0"
rayon = "1.5.0"
itertools = "0.10.0"
mimc = { version = "0.1.0", path = "../mimc" }
http-types = "2.10.0"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
