[package]
name = "mimc"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
uint = "0.9.0"
serde = { version = "1.0.124", features = ["derive"] }
